--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
@@ -30,9 +33,6 @@
                 </ul>
             </div>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
     </nav>
 
     <header class="jumbotron">
@@ -42,8 +42,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a role="button" class="btn btn-sm btn-warning btn-block" href="#reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -69,12 +72,17 @@
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
+            <div class="col col-sm order-sm-last col-m">
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand Buffet">
+                </div>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-12 col-sm-4 order-sm-first col-md-3">
+                <h3>This Month's Promotions</h3>
             </div>
         </div>
 
@@ -98,12 +106,52 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content" id="reserve">
+            <div class="offset-sm-2 col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white text-left">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form class="reserve-form">
+                            <div class="row form-group">
+                                <label for="guests1" class="col-sm-3 col-form-label text-left">Number of Guests</label>
+                                <div class="col-sm-9 text-left">
+                                    <input type="radio" id="guests1" name="guests" value="1" checked>
+                                    <label for="guests1">1</label>
+                                    <input type="radio" id="guests2" name="guests" value="2">
+                                    <label for="guests2">2</label>
+                                    <input type="radio" id="guests3" name="guests" value="3">
+                                    <label for="guests3">3</label>
+                                    <input type="radio" id="guests4" name="guests" value="4">
+                                    <label for="guests4">4</label>
+                                    <input type="radio" id="guests5" name="guests" value="5">
+                                    <label for="guests5">5</label>
+                                    <input type="radio" id="guests6" name="guests" value="6">
+                                    <label for="guests6">6</label>
+                                </div>
+                            </div>
+                            <dl class="row form-group">
+                                <label for="date" class="col-sm-3 col-form-label text-left">Date and Time</label>
+                                <div class="col-sm-9 text-left">
+                                    <input type="text" id="date" name="date" placeholder="Date">
+                                    <input type="text" id="time" name="time" placeholder="Time">
+                                </div>
+                            </dl>
+                            <dl class="row form-group">
+                                <div class="offset-md-2 col-md-10 text-left">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </dl>
+                        </form>
+                    </div>
+                </div>
+            </div>
     </div>
 
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-4 col-sm-2">
+                <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -141,7 +189,7 @@
                 </div>
            </div>
         </div>
-    </footercl>
+    </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
