--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
 
 <body>
 
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
+        <div class="collapse navbar-collapse" id="Navbar">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+            </ul>
+        </div>
+      </div>
+      <span class="navbar-text">
+          <a data-toggle="modal" data-target="#loginModal">
+          <span class="fa fa-sign-in"></span> Login</a>
+      </span>
+    </nav>
+
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
@@ -55,26 +76,66 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-                </ul>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="reserve-form">
+                        <div class="row form-group">
+                            <label for="guests1" class="col-sm-3 col-form-label text-left">Number of Guests</label>
+                            <div class="col-sm-9 text-left">
+                                <input type="radio" id="guests1" name="guests" value="1" checked>
+                                <label for="guests1">1</label>
+                                <input type="radio" id="guests2" name="guests" value="2">
+                                <label for="guests2">2</label>
+                                <input type="radio" id="guests3" name="guests" value="3">
+                                <label for="guests3">3</label>
+                                <input type="radio" id="guests4" name="guests" value="4">
+                                <label for="guests4">4</label>
+                                <input type="radio" id="guests5" name="guests" value="5">
+                                <label for="guests5">5</label>
+                                <input type="radio" id="guests6" name="guests" value="6">
+                                <label for="guests6">6</label>
+                            </div>
+                        </div>
+
+                        <dl class="row form-group">
+                            <label for="nonsmoking" class="col-sm-3 col-form-label text-left">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" value="nonsmoking" name="section" id="nonsmoking" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" value="smoking" name="section" id="smoking" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </dl>
+
+                        <dl class="row form-group">
+                            <label for="date" class="col-sm-3 col-form-label text-left">Date and Time</label>
+                            <div class="col-sm-9 text-left">
+                                <input type="text" id="date" name="date" placeholder="Date">
+                                <input type="text" id="time" name="time" placeholder="Time">
+                            </div>
+                        </dl>
+
+                        <dl class="row form-group">
+                            <div class="offset-md-2 col-md-10 text-left">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </dl>
+                    </form>
+                </div>
             </div>
         </div>
-        <span class="navbar-text">
-            <a data-toggle="modal" data-target="#loginModal">
-            <span class="fa fa-sign-in"></span> Login</a>
-        </span>
-    </nav>
+    </div>
+
 
     <header class="jumbotron">
         <div class="container">
@@ -88,8 +149,7 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     <a role="button" class="btn btn-block nav-link btn-warning"
-                       data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                       data-placement="bottom" href="#reserve">Reserve Table</a>
+                       data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -199,46 +259,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row row-content" id="reserve">
-            <div class="offset-sm-2 col-12 col-sm-8">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white text-left">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form class="reserve-form">
-                            <div class="row form-group">
-                                <label for="guests1" class="col-sm-3 col-form-label text-left">Number of Guests</label>
-                                <div class="col-sm-9 text-left">
-                                    <input type="radio" id="guests1" name="guests" value="1" checked>
-                                    <label for="guests1">1</label>
-                                    <input type="radio" id="guests2" name="guests" value="2">
-                                    <label for="guests2">2</label>
-                                    <input type="radio" id="guests3" name="guests" value="3">
-                                    <label for="guests3">3</label>
-                                    <input type="radio" id="guests4" name="guests" value="4">
-                                    <label for="guests4">4</label>
-                                    <input type="radio" id="guests5" name="guests" value="5">
-                                    <label for="guests5">5</label>
-                                    <input type="radio" id="guests6" name="guests" value="6">
-                                    <label for="guests6">6</label>
-                                </div>
-                            </div>
-                            <dl class="row form-group">
-                                <label for="date" class="col-sm-3 col-form-label text-left">Date and Time</label>
-                                <div class="col-sm-9 text-left">
-                                    <input type="text" id="date" name="date" placeholder="Date">
-                                    <input type="text" id="time" name="time" placeholder="Time">
-                                </div>
-                            </dl>
-                            <dl class="row form-group">
-                                <div class="offset-md-2 col-md-10 text-left">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </dl>
-                        </form>
-                    </div>
-                </div>
-            </div>
     </div>
 
     <footer class="footer">
@@ -289,11 +309,6 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script>
-      $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-    </script>
 </body>
 
 </html>
