--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         </div>
       </div>
       <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal">
-          <span class="fa fa-sign-in"></span> Login</a>
+          <a id="login"><span class="fa fa-sign-in"></span> Login</a>
       </span>
     </nav>
 
@@ -136,7 +135,6 @@
         </div>
     </div>
 
-
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -148,8 +146,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning"
-                       data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                    <a id="reserve" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -248,8 +245,7 @@
             </div>
             <div class="col col-sm order-sm-first col-m">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
-                         src="img/alberto.png" alt="Alberto Somayya">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -311,6 +307,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <script>
       $("#carouselButton").click(function(){
         if ($("#carouselButton").children("span").hasClass('fa-pause')) {
@@ -324,6 +321,14 @@
           $("#carouselButton").children("span").addClass('fa-pause');
         }
       });
+
+      $('#login').click(() => {
+        $("#loginModal").modal('show')
+      })
+
+      $('#reserve').click(() => {
+        $("#reserveModal").modal('show')
+      })
     </script>
 
 
